assignment-1.css
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

header {
  width: 100%;
  height: 30rem;
  background-image: url('Assets/Hero-bg.png');
  background-repeat: no-repeat;
  background-size: cover; 
  background-position: center; 
}

.open-sans-normal{
   font-family: 'Raleway', sans-serif;
  font-optical-sizing: auto;
  font-style: normal;
  font-variation-settings:
    "wdth" 100;
}


.container {
  width: 91.6667%;
  max-width: 1280px;
  margin-left: auto;
  margin-right: auto;
}


.nav1{
    display: flex;
    justify-content: space-between;
    padding: 2rem;
}
.nav1 h2{
    color: #4E47FF;
    font-family: 'Inter', sans-serif;

}
.btn-primary{
    background-color: #4E47FF;
    font-weight: bold;
     border: none;
  color: white;
  padding: 10px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  margin: 4px 2px;
  cursor: pointer;
  border-radius: 10px;
}

.head-part-2{
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    text-align: center;
    margin-top: 7rem;
}
.head-part-2 h2{
    font-weight: bold;
    color: #252432;
    font-size: 50px;
}
.btn2{
    margin-top: 2rem;
}
/* Section->Action */
.action{
  display: flex;
  justify-content: space-between;
  padding: 2rem;
  align-items: center;
  width: 91.6667%;
  max-width: 1280px;
  margin-left: auto;
  margin-right: auto;
  margin-top: 116px;
  gap: 3rem;
}

.action2{
  display: flex;
  flex-direction: column;
  text-align: left;

}
.action2 h3{
  margin-bottom: 1rem;
  font-weight: bold;
  font-size: 42px;
  color: #252432;
}
.action2 p{
  margin-bottom: 1rem;
  color: #252432;
  font-size: 24px;
}
.btn3{
     padding: 10px 20px;
    font-size: 16px;
    width: fit-content;
    max-width: 200px;
}
.action img{
  width: 403;
  height: 328;
  border-radius: 48px;
}
/* Section->Users Rating */

.users{
  display: flex;
  
  flex-direction: column;
  align-items: center;
  width: 91.6667%;
  max-width: 1280px;
  margin-left: auto;
  margin-right: auto;
  background-color: #4d47ff16;
  border-radius: 24px;
  margin-top: 116px;
  padding: 50px 80px;
}
.users h4{
  color: #252432;
  font-weight: bold;
  font-size: 38px;
  margin-top: 3rem;
  margin-bottom: 2rem;
}

.users-rating{
  font-family: 'Inter', sans-serif;
  display: flex;
  justify-content: space-between;
  gap: 170px;
  margin-bottom: 3rem;
}

.active-user h1{
    color: #4E47FF;
    font-weight: bold;
    font-size: 70px;
    
}
.active-user p{
   color:#00000080;
   font-size: 15px;
}
.focus h1{
    color: #4E47FF;
    font-weight: bold;
    font-size: 70px;
}
.focus p{
  color: #00000080;
  font-size: 15px;
}
.satisfaction h1{
  color: #4E47FF;
  font-weight: bold;
    font-size: 70px;
}
.satisfaction p{
  color: #00000080;
  font-size: 15px;
}

/* Comment Section */

.comment-head{
  text-align: center;
  font-weight: bold;
  font-size: 42px;
  color: #252432;
  margin-top: 50px;
  margin-bottom: 50px;
}

.main-comment{
  display: flex;
  justify-content: space-between;
   width: 91.6667%;
  max-width: 1280px;
  margin-left: auto;
  margin-right: auto;
}

 .comment {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding: 24px;
  border-radius: 24px;
  background-color: #ffffff74;
  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.12);
  padding-right: 100px;
}

.comment-title{
  margin-top: 20px;
}

.comment-title h5{
  font-family: 'Avenir', sans-serif;
}
.comment-title p{
  font-family: 'Inter' sans-serif;
  color: #1E1E1E;
  
}


.comment-rating{
  margin-top: 50px;
}

.comment-reviewer{
  display: flex;
  margin-top: 20px;
  gap: 5px;
}

.comment-reviewer img{
  border-radius: 9999px;
}

.reviewer-data{
    font-family: 'Inter', sans-serif;
  color: #757575;
}

/* Section ->Focus */
.focus2{
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  margin-top: 137px;
  padding: 71px 150px;
  background-color: #FFFFFF;
}
.focus2 h3{
  font-weight: bold;
  font-size: 50px;
  color: #000000;
  margin-bottom: 20px;
}
.focus2 p{
  color: #00000070;
  margin-bottom: 20px;
}
.btn4{
  margin-bottom: 20px;
}
.focus2 img{
  border-radius: 48px;
}

/* Form */

/* Style for form inputs */
.contact-container {
  width: 91.6667%;
  max-width: 1280px;
  margin-left: auto;
  margin-right: auto;
  display: flex;
  justify-content: space-between;
  background: #f6f8ff;
  padding: 71px;
  border-radius: 10px;
  box-shadow: 0 4px 20px rgba(0,0,0,0.05);
   font-family: 'Inter', sans-serif;
}

.left-side {
  flex: 1;
  display: flex;
  align-items: center;
  font-size: 2.8rem;
  font-weight: bold;
  color: #000;
  margin-left: 7rem;
}

.right-side {
  flex: 1;
  padding-left: 40px;
  margin-right: 4rem;
}

.contact-form {
  display: flex;
  flex-direction: column;
}

.contact-form label {
  margin-top: 20px;
  margin-bottom: 5px;
  font-size: 14px;
  color: #333;
}

.contact-form input,
.contact-form textarea {
  padding: 12px;
  border: 1px solid #ddd;
  border-radius: 6px;
  font-size: 14px;
  width: 100%;
   font-family: 'Inter', sans-serif;
}

.contact-form textarea {
  resize: vertical;
  min-height: 100px;
   font-family: 'Inter', sans-serif;
}

.contact-form button {
  margin-top: 20px;
  padding: 12px;
  background-color: #4f46e5;
  color: #fff;
  border: none;
  border-radius: 6px;
  font-weight: bold;
  cursor: pointer;
}

.contact-form button:hover {
  background-color: #4338ca;
}

